--- a/src/Presentation/SmartStore.Web/Administration/Views/QueuedEmail/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/QueuedEmail/List.cshtml
@@ -12,51 +12,56 @@
             @T("Admin.System.QueuedEmails")
         </div>
         <div class="options">
-            <button type="submit" id="delete-selected" name="delete-selected" value="delete_selected"
-                class="btn btn-danger"><i class="fa fa-trash-o"></i>&nbsp;@T("Admin.System.QueuedEmails.DeleteSelected")</button>
+            <button type="submit" id="delete-selected" name="delete-selected" value="delete_selected" class="btn">
+				<i class="fa fa-trash-o"></i>&nbsp;@T("Admin.System.QueuedEmails.DeleteSelected")
+			</button>
+			<button type="submit" id="delete-all" name="delete-all" value="delete-all" class="btn btn-danger" onclick="return confirm('@T("Admin.Common.AreYouSure")');">
+				<i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.DeleteAll")
+			</button>
         </div>
     </div>
-    <table width="100%">
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.SearchStartDate)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => model.SearchStartDate)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.SearchEndDate)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => Model.SearchEndDate)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.SearchFromEmail)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => Model.SearchFromEmail)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.SearchToEmail)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => Model.SearchToEmail)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.SearchLoadNotSent)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => Model.SearchLoadNotSent)
-            </td>
-        </tr>
+	
+	<table class="adminContent">
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchStartDate)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => model.SearchStartDate)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchEndDate)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.SearchEndDate)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchFromEmail)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.SearchFromEmail)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchToEmail)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.SearchToEmail)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchLoadNotSent)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.SearchLoadNotSent)
+			</td>
+		</tr>
 		<tr>
 			<td class="adminTitle">
 				@Html.SmartLabelFor(model => model.SearchSendManually)
@@ -70,36 +75,37 @@
 				})
 			</td>
 		</tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.SearchMaxSentTries)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => Model.SearchMaxSentTries)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.GoDirectlyToNumber)
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => Model.GoDirectlyToNumber)
-                <button type="submit" name="go-to-email-by-number" value="go-to-email-by-number" class="btn">
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchMaxSentTries)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.SearchMaxSentTries)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.GoDirectlyToNumber)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.GoDirectlyToNumber)
+				<button type="submit" name="go-to-email-by-number" value="go-to-email-by-number" class="btn">
 					<i class="fa fa-play-circle-o"></i>&nbsp;@T("Admin.Common.Go")
 				</button>
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
 				&nbsp;
 			</td>
 			<td class="adminData">
-                <button type="submit" id="btnSearch" class="btn"><i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")</button>
-            </td>
-        </tr>
-    </table>
-    <p>
-    </p>
+				<button type="submit" id="btnSearch" class="btn"><i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")</button>
+			</td>
+		</tr>
+	</table>
+
+    <p></p>
+	
     <table class="adminContent">
         <tr>
             <td>
