Closes #648 Add hint for * at mandatory form fields at address creation

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/checkout.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/checkout.less
@@ -167,6 +167,11 @@
 	text-align:left;
 }
 
+.address-required-hint {
+    margin-bottom: 12px;
+    font-size: 12px;
+}
+
 .checkout-data .payment-info {
 	padding: 10px 0;
 	border-top: 1px solid #d7d7d7;
