More minor UI fixes

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -1231,7 +1231,7 @@
                         .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Order/ShipmentDetails/") + "<#= Id #>\">" + T("Admin.Common.View").Text + "</a>")
                         .Width(50)
                         .Centered()
-                        .HeaderTemplate(T("Admin.Common.View").Text);
+                        .HeaderTemplate("<span class=\"t-link\">{0}</span>".FormatWith(T("Admin.Common.View").Text));
                 })
                 .EnableCustomBinding(true))
 
