Lots of new stuff and enhancements: * Transient media records (pictures & downloads). Prevents database to be flooded with orphaned records. * Added ToPostedFileResult() extension method for much easier handling of uploaded files (much less code now) * Added new scheduled task 'Clear Transient Uploads' * Added SmartStore.Services.Media.MediaHelper utility class (helps to update media records transient states) * E-mail attachments: MessageTemplates can now reference up to 3 attachments. * Began enhancing the uploader UI for 'Download' * (Perf) several enhancements on database level * Added ShrinkDatabase() extension method to IDbContext

--- a/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/Index.cshtml
@@ -78,7 +78,7 @@
                 @Html.SmartLabelFor(model => model.BackgroundPictureId)
             </td>
             <td class="adminData">
-                @Html.EditorFor(model => model.BackgroundPictureId, "Picture")
+                @Html.EditorFor(model => model.BackgroundPictureId, "Picture", new { transientUpload = true })
                 @Html.ValidationMessageFor(model => model.BackgroundPictureId)
             </td>
         </tr>
