--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -34,6 +34,10 @@
         toggleShipping();
         toggleTax();
         
+    	// show/hide homepage display order
+    	$('#ShowOnHomePage').change(function () {
+    		$('#pnlHomePageDisplayOrder').toggle($(this).is(':checked'));
+        }).trigger('change');
     });
 
     function toggleProductType() {
@@ -396,6 +400,15 @@
 			<td class="adminData">
 				@Html.EditorFor(model => model.ShowOnHomePage)
 				@Html.ValidationMessageFor(model => model.ShowOnHomePage)
+			</td>
+		</tr>
+		<tr id="pnlHomePageDisplayOrder">
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.HomePageDisplayOrder)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => model.HomePageDisplayOrder)
+				@Html.ValidationMessageFor(model => model.HomePageDisplayOrder)
 			</td>
 		</tr>
 		<tr>
