Added link to Confluence documentation in backend

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
@@ -11,6 +11,7 @@
 	string communityUrl = (currentLanguageCode == "de" ? 
 		"http://community.smartstore.com" :
 		"http://community.smartstore.com/index.php?/&k=880ea6a14ea49e853634fbdc5015a024&setlanguage=1&cal_id=&langid=1");
+	string docsUrl = "https://smartstore.atlassian.net/wiki/x/CAAk";
 	var checkUpdateResult = ViewBag.CheckUpdateResult as CheckUpdateResult;
 }
 
@@ -73,15 +74,22 @@
 					</li>
 				}
 				<li>
+					<a href="@docsUrl" data-lang="@currentLanguageCode" target="help">
+						<i class="fa fa-fw fa-book"></i>
+						@T("Admin.Help.Documentation")
+					</a>
+				</li>
+				<li>
 					<a href="@communityUrl" data-lang="@currentLanguageCode" target="help">
 						<i class="fa fa-fw fa-comment"></i>
 						@T("Admin.Help.Forums")
 					</a>
 				</li>
+				<li class="divider"></li>
 				<li>
 					<a href="@Url.Action("About", "Home", new { area = "Admin" })">
 						<i class="fa fa-fw fa-info-circle"></i>
-						@T("Admin.Common.About") SmartStore.NET
+						@T("Admin.Common.About")
 					</a>
 				</li>
 			</ul>
