--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/checkout.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/checkout.less
@@ -21,7 +21,8 @@
 		background-color: #f9f9f9;
 		border-color: #f9f9f9;
 	}
-	.opt-info { 
+	.opt-info,
+	.opt-info-item { 
 		margin-top: 6px;
 		margin-left: 32px;
 	}
